package strategy;

public interface PaymentStrategy {
    void execute(double amount);
}