package subject;

public enum Status {
    PENDING,
    CONFIRMED,
    CANCELLED
}
